--- a/index.html
+++ b/index.html
@@ -737,6 +737,20 @@
 <thead>
 <tr><th>Date</th><th>OS</th><th>Result</th><th>Files</th></tr></thead>
 <tbody>
+<tr style="border-top: 2px solid #ddd"><td class="text-center"><b>2022-03-01</b></td>
+<td style="color: rgb(102,194,165)"><span class="fl-centos" title="CentOS"></span> 7</td>
+<td>
+<span style="color:#ca0020"><samp style="font-size: smaller">BUILD_ALL_REPOS E: mvn_package mvn package <b>failed</b> for repository ncm-ncd <br>(cmd mvn clean package -Dprove.args=-v)</samp></span></td>
+<td>
+<a title="Build log" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-03-01T02/CentOS-7/log.gz"><span class="octicon octicon-file-text"></span></a><a title="Packages" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-03-01T02/CentOS-7/rpms"><span class="octicon octicon-package"></span></a></td>
+</tr>
+<tr><td class="text-center" style="border-top-style: none"><span class="text-muted" title="2022-03-01">&#x3003;</span></td>
+<td style="color: rgb(252,141,98)"><span class="fl-centos" title="CentOS"></span> 6</td>
+<td>
+<span style="color:#ca0020"><samp style="font-size: smaller">BUILD_ALL_REPOS E: mvn_package mvn package <b>failed</b> for repository ncm-ncd <br>(cmd mvn clean package -Dprove.args=-v)</samp></span></td>
+<td>
+<a title="Build log" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-03-01T01/CentOS-6/log.gz"><span class="octicon octicon-file-text"></span></a><a title="Packages" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-03-01T01/CentOS-6/rpms"><span class="octicon octicon-package"></span></a></td>
+</tr>
 <tr style="border-top: 2px solid #ddd"><td class="text-center"><b>2022-02-28</b></td>
 <td style="color: rgb(102,194,165)"><span class="fl-centos" title="CentOS"></span> 7</td>
 <td>
@@ -6936,7 +6950,7 @@
 </div>
 </div>
 </div>
-<p class="text-muted">Page generated <span class="reldate">2022-02-28 17:34:29<span></p>
+<p class="text-muted">Page generated <span class="reldate">2022-03-01 08:04:49<span></p>
 </div>
 
   <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
