--- a/index.html
+++ b/index.html
@@ -769,6 +769,13 @@
 <thead>
 <tr><th>Date</th><th>OS</th><th>Result</th><th>Files</th></tr></thead>
 <tbody>
+<tr style="border-top: 2px solid #ddd"><td class="text-center"><b>2022-07-18</b></td>
+<td style="color: rgb(252,141,98)"><span class="fl-centos" title="CentOS"></span> 6</td>
+<td>
+<span style="color:#ca0020"><samp style="font-size: smaller">BUILD_ALL_REPOS E: mvn_package mvn package <b>failed</b> for repository ncm-ncd <br>(cmd mvn clean package -Dprove.args=-v)</samp></span></td>
+<td>
+<a title="Build log" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-07-18T10/CentOS-6/log.gz"><span class="octicon octicon-file-text"></span></a><a title="Packages" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-07-18T10/CentOS-6/rpms"><span class="octicon octicon-package"></span></a></td>
+</tr>
 <tr style="border-top: 2px solid #ddd"><td class="text-center"><b>2022-03-01</b></td>
 <td style="color: rgb(102,194,165)"><span class="fl-centos" title="CentOS"></span> 7</td>
 <td>
@@ -6982,7 +6989,7 @@
 </div>
 </div>
 </div>
-<p class="text-muted">Page generated <span class="reldate">2022-07-18 10:34:54<span></p>
+<p class="text-muted">Page generated <span class="reldate">2022-07-18 11:05:00<span></p>
 </div>
 
   <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
