--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Quattor Backlog</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.css">
-    <link rel="stylesheet" href="//cdn.rawgit.com/Lukas-W/font-linux/v0.9/assets/font-linux.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/Lukas-W/font-logos@v0.18/assets/font-logos.css":>
     <style type="text/css">
       @import url(//fonts.googleapis.com/css?family=Lato:400);
       body {
@@ -770,7 +770,7 @@
 <tr><th>Date</th><th>OS</th><th>Result</th><th>Files</th></tr></thead>
 <tbody>
 <tr style="border-top: 2px solid #ddd"><td class="text-center"><b>2022-07-20</b></td>
-<td style="color: rgb(141,160,203)"><span class="fl-centosstream" title="CentOSStream"></span> 8</td>
+<td style="color: rgb(141,160,203)"><span class="fl-centos" title="CentOSStream"></span> 8</td>
 <td>
 <span style="color:#ca0020"><samp style="font-size: smaller">BUILD_ALL_REPOS E: mvn_package mvn package <b>failed</b> for repository ncm-lib-blockdevices <br>(cmd mvn clean package -Dprove.args=-v)</samp></span></td>
 <td>
@@ -7017,7 +7017,7 @@
 </div>
 </div>
 </div>
-<p class="text-muted">Page generated <span class="reldate">2022-07-20 17:17:03<span></p>
+<p class="text-muted">Page generated <span class="reldate">2022-07-20 17:44:35<span></p>
 </div>
 
   <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
