--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Quattor Backlog</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/Lukas-W/font-logos@v0.17/assets/font-logos.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/font-logos@1/assets/font-logos.css">
     <style type="text/css">
       @import url(//fonts.googleapis.com/css?family=Lato:400);
       body {
@@ -777,7 +777,7 @@
 <a title="Build log" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-07-21T02/CentOS-7/log.gz"><span class="octicon octicon-file-text"></span></a><a title="Packages" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-07-21T02/CentOS-7/rpms"><span class="octicon octicon-package"></span></a></td>
 </tr>
 <tr><td class="text-center" style="border-top-style: none"><span class="text-muted" title="2022-07-21">&#x3003;</span></td>
-<td style="color: rgb(231,138,195)"><span class="fl-rocky" title="Rocky"></span> 8</td>
+<td style="color: rgb(231,138,195)"><span class="fl-rocky-linux" title="Rocky"></span> 8</td>
 <td>
 <span style="color:#ca0020"><samp style="font-size: smaller">BUILD_ALL_REPOS E: <b>Failed</b> installation of pkg xmvn-minimal with yum</samp></span></td>
 <td>
@@ -7038,7 +7038,7 @@
 </div>
 </div>
 </div>
-<p class="text-muted">Page generated <span class="reldate">2022-07-21 09:04:58<span></p>
+<p class="text-muted">Page generated <span class="reldate">2022-07-21 10:04:58<span></p>
 </div>
 
   <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
