--- a/index.html
+++ b/index.html
@@ -775,6 +775,27 @@
 <thead>
 <tr><th>Date</th><th>OS</th><th>Result</th><th>Files</th></tr></thead>
 <tbody>
+<tr style="border-top: 2px solid #ddd"><td class="text-center"><b>2022-08-03</b></td>
+<td style="color: rgb(102,194,165)"><span class="fl-centos" title="CentOS"></span> 7</td>
+<td>
+<span style="color:#ca0020"><samp style="font-size: smaller">BUILD_ALL_REPOS E: mvn_package mvn package <b>failed</b> for repository ncm-ncd <br>(cmd mvn clean package -Dprove.args=-v)</samp></span></td>
+<td>
+<a title="Build log" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-08-03T02/CentOS-7/log.gz"><span class="octicon octicon-file-text"></span></a><a title="Packages" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-08-03T02/CentOS-7/rpms"><span class="octicon octicon-package"></span></a></td>
+</tr>
+<tr><td class="text-center" style="border-top-style: none"><span class="text-muted" title="2022-08-03">&#x3003;</span></td>
+<td style="color: rgb(231,138,195)"><span class="fl-rocky-linux" title="Rocky"></span> 8</td>
+<td>
+<span style="color:#ca0020"><samp style="font-size: smaller">BUILD_ALL_REPOS E: <b>Failed</b> installation of pkg xmvn-minimal with yum</samp></span></td>
+<td>
+<a title="Build log" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-08-03T01/Rocky-8/log.gz"><span class="octicon octicon-file-text"></span></a><a title="Packages" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-08-03T01/Rocky-8/rpms"><span class="octicon octicon-package"></span></a></td>
+</tr>
+<tr><td class="text-center" style="border-top-style: none"><span class="text-muted" title="2022-08-03">&#x3003;</span></td>
+<td style="color: rgb(252,141,98)"><span class="fl-centos" title="CentOS"></span> 6</td>
+<td>
+<span style="color:#ca0020"><samp style="font-size: smaller">BUILD_ALL_REPOS E: mvn_package mvn package <b>failed</b> for repository ncm-ncd <br>(cmd mvn clean package -Dprove.args=-v)</samp></span></td>
+<td>
+<a title="Build log" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-08-03T01/CentOS-6/log.gz"><span class="octicon octicon-file-text"></span></a><a title="Packages" class="btn btn-default btn-xs" href="http://yum.quattor.org/nightlies/2022-08-03T01/CentOS-6/rpms"><span class="octicon octicon-package"></span></a></td>
+</tr>
 <tr style="border-top: 2px solid #ddd"><td class="text-center"><b>2022-08-02</b></td>
 <td style="color: rgb(102,194,165)"><span class="fl-centos" title="CentOS"></span> 7</td>
 <td>
@@ -7296,7 +7317,7 @@
 </div>
 </div>
 </div>
-<p class="text-muted">Page generated <span class="reldate">2022-08-02 16:35:02<span></p>
+<p class="text-muted">Page generated <span class="reldate">2022-08-03 07:05:21<span></p>
 </div>
 
   <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
